[tool.poetry]
name = "push-image"
version = "0.1.0"
description = ""
authors = ["TaikiIwahori <hmyrwjj@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
paramiko = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
